# local_planner

./: README 2.md  README.md
Map_Conversion/: CMakeLists.txt
Map_Conversion/config/: params.yaml
Map_Conversion/launch/: slam_to_planning.launch
car_demo/car_demo/: CMakeLists.txt
car_demo/car_demo/launch/: demo.launch
car_demo/car_demo/rviz/: demo.rviz
car_demo/prius_description/urdf/: prius.urdf
frenet_planner_agv/: CMakeLists.txt  README.md
frenet_planner_agv/cfg/: frenet_planner.yaml
frenet_planner_agv/cmake/: TBBConfig.cmake
frenet_planner_agv/include/: cubic_spline_planner.hpp  frenet_optimal_trajectory.hpp  polynomials.hpp
frenet_planner_agv/launch/: frenet_planner.launch
frenet_planner_agv/src/: cubic_spline_planner.cpp  frenetROS_obst.cpp  frenet_optimal_trajectory.cpp  global_path_planner.cpp  polynomials.cpp
niagara_model/: CMakeLists.txt  package.xml
niagara_model/launch/: display.launch.py
niagara_model/navigation/: README.md  nav2_ackermann_checker.py  start_navigation.sh
niagara_model/navigation/behavior_trees/: ackermann_nav_bt.xml  ackermann_nav_through_poses_bt.xml
niagara_model/navigation/config/: nav2_params.yaml  stvl_layer_config.yaml
niagara_model/navigation/launch/: nav2_bringup.launch.py
niagara_model/rviz/: urdf_config_points.rviz
niagara_model/urdf/: AckermannPlugIn.xacro  Autoreifen.xacro  DasAutonomeAuto.urdf  camera.xacro  depth_camera.xacro
niagara_model/world/: empty_world.sdf  nav.world
niagara_nav/: CMakeLists.txt  package.xml
niagara_nav/config/: navigation_3d.yaml  navigation_ackermann.yaml  navigation_ackermann2.yaml
niagara_nav/launch/: navigation.launch.py
niagara_nav/maps/: map.yaml
niagara_nav/rviz/: niagara_nav.rviz
obstacle_perception/: CMakeLists.txt  README.md  package.xml
obstacle_perception/include/obstacle_perception/: obstacle_perception_node.h
obstacle_perception/launch/: test.launch
obstacle_perception/src/: obstacle_perception_node.cpp
pcl_test/: CMakeLists.txt
plane_fit_ground_filter-master/: CMakeLists.txt  package.xml
plane_fit_ground_filter-master/launch/: plane_ground_filter.launch
plane_fit_ground_filter-master/src/: obstacle_detector_node.cpp.cpp  plane_ground_filter_core.cpp
robot_localization/launch/: localization.launch.py
robot_localization/params/: my_localization.yaml
tracking_control/src/scripts/controllers/: PID_MIT_velocity_controller.py
tracking_control/src/scripts/tracking_Methods/: pure_pursuit.py
